# MailFlowPro

./: .env..example  README.md  pyproject.toml
blog/: admin.py  models.py  views.py
blog/templates/blog/: blog_detail.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_list.html
config/: settings.py  urls.py
core/: services.py  urls.py  views.py
core/templates/core/: base.html  contacts.html  index.html
mailing/: admin.py  cron.py  forms.py  models.py  services.py  urls.py
mailing/models/: client.py  mailing.py
mailing/template/mailing/: mailingsettings_form.html
mailing/templates/mailing/: mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html
mailing/views/: mailing.py  mailing_log.py
users/: admin.py  views.py
users/management/commands/: csu.py
